--- a/axon-sdk/package.json
+++ b/axon-sdk/package.json
@@ -1,12 +1,51 @@
 {
   "name": "axon-sdk",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "index.js",
+  "description": "A React SDK for onchain ad platforms with Base network integration",
+  "license": "MIT",
+  "author": "hatif03",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "CONFIGURATION.md"
+  ],
+  "keywords": [
+    "react",
+    "sdk",
+    "advertising",
+    "onchain",
+    "base",
+    "onchainkit",
+    "web3"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hatif03/axonlayer.git"
+  },
+  "dependencies": {
+    "@coinbase/onchainkit": "^1.1.1",
+    "@tanstack/react-query": "^5.90.2",
+    "@types/node": "^24.6.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "typescript": "^5.8.3",
+    "viem": "^2.37.12",
+    "wagmi": "^2.17.5"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0"
   }
 }
