Update Axon SDK examples and documentation
- Updated package.json description for clarity on the SDK's purpose.
- Added multiple example files demonstrating various usage scenarios, including basic, advanced, Next.js, and Vite integrations.
- Created a README.md file to provide an overview of examples and setup instructions.
- Included a real-world blog example showcasing multiple ad placements and configurations.
- Enhanced examples with environment variable support for Next.js applications.

--- a/axon-sdk/package.json
+++ b/axon-sdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "axon-sdk",
   "version": "1.0.0",
-  "description": "A React SDK for onchain ad platforms with Base network integration",
+  "description": "A React SDK for Axon onchain ad platform with Base network integration",
   "license": "MIT",
   "author": "hatif03",
   "type": "module",
