Update Axon SDK to version 1.0.1 with changelog and configuration fixes
- Added CHANGELOG.md to document notable changes and adhere to semantic versioning.
- Fixed import issues and updated package.json for proper module resolution.
- Removed problematic "type": "module" and added exports field for compatibility.
- Changed TypeScript module resolution from "bundler" to "node" for better library support.

--- a/axon-sdk/package.json
+++ b/axon-sdk/package.json
@@ -1,13 +1,19 @@
 {
   "name": "axon-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A React SDK for onchain ad platforms with Base network integration",
   "license": "MIT",
   "author": "hatif03",
-  "type": "module",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
