--- a/axon-sdk/tsconfig.json
+++ b/axon-sdk/tsconfig.json
@@ -9,7 +9,7 @@
     "noEmit": false,
     "esModuleInterop": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
