--- a/axon-sdk/package.json
+++ b/axon-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axon-sdk",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A React SDK for onchain ad platforms with Base network integration",
   "license": "MIT",
   "author": "hatif03",
@@ -38,7 +38,8 @@
     "crypto",
     "blockchain",
     "ads",
-    "monetization"
+    "monetization",
+    "decentralized"
   ],
   "repository": {
     "type": "git",
