--- a/app/package.json
+++ b/app/package.json
@@ -1,27 +1,71 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "axonlayer-app",
+  "version": "1.0.0",
+  "description": "Frontend console for axonlayer ads platform",
+  "main": "index.js",
+  "author": "hatif03",
+  "license": "UNLICENSED",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "@chainsafe/bls": "^8.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@lighthouse-web3/sdk": "^0.4.3",
+    "@prisma/client": "^6.16.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@reown/appkit": "^1.8.7",
+    "@tanstack/react-query": "^5.67.1",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^22.13.9",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/uuid": "^10.0.0",
+    "@web3modal/wagmi": "^5.1.11",
+    "autoprefixer": "^10.4.20",
+    "axon-sdk": "^1.1.0",
+    "bls-eth-wasm": "^1.4.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.2.1",
+    "ethers": "^6.15.0",
+    "framer-motion": "^12.4.10",
+    "lucide-react": "^0.477.0",
+    "multer": "^2.0.2",
+    "next": "^15.2.1",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prisma": "^6.16.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.2",
+    "uuid": "^13.0.0",
+    "viem": "^2.23.6",
+    "wagmi": "^2.14.12",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "mini-css-extract-plugin": "^2.9.4"
   }
 }
