Refactor AxonLayer frontend for Base network integration and wallet management
- Updated environment configuration to support Base network.
- Changed package.json and package-lock.json to reflect new app name and dependencies.
- Removed RainbowKit integration and replaced it with OnchainKit for wallet connections.
- Enhanced wallet connection handling with new components and hooks.
- Updated USDC contract addresses and configurations for Base network.
- Improved ad slot size handling in components for better responsiveness.

--- a/app/env.example
+++ b/app/env.example
@@ -11,5 +11,6 @@ NEXT_PUBLIC_RAINBOWKIT_PROJECT_ID=
 CDP_API_KEY=""
 CDP_API_SECRET_KEY=""
 # Network Configuration
-NEXT_PUBLIC_NETWORK="base-sepolia"
+NEXT_PUBLIC_NETWORK="base"
 NEXT_PUBLIC_CURRENCY="USDC"
+NEXT_PUBLIC_ONCHAINKIT_API_KEY=""
