--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@chainsafe/bls": "^8.2.0",
+    "@coinbase/onchainkit": "^1.1.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@lighthouse-web3/sdk": "^0.4.3",
@@ -27,7 +28,6 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
-    "@rainbow-me/rainbowkit": "^2.2.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@reown/appkit": "^1.8.7",
     "@tanstack/react-query": "^5.67.1",
