Update Axon SDK to version 1.2.0 with new features and improvements
- Enhanced theme customization options including hover states, success/error colors, and custom styles.
- Introduced support for multiple wallet providers: MetaMask, Coinbase Wallet, WalletConnect, and Injected wallets.
- Added multi-network support for Base, Base Sepolia, Mainnet, and Sepolia.
- Improved error handling with detailed messages and graceful fallbacks for network issues.
- Expanded ad slot sizes to include Card (300x200) and Leaderboard (970x90).
- Updated package.json and package-lock.json to reflect new version and dependencies.
- Enhanced documentation and examples to showcase new features and configurations.

--- a/axon-sdk/package.json
+++ b/axon-sdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "axon-sdk",
-  "version": "1.1.0",
-  "description": "A React SDK for onchain ad platforms with Base network integration",
+  "version": "1.2.0",
+  "description": "A React SDK for onchain ad platforms with enhanced error handling, multiple wallet providers, and advanced theme customization",
   "license": "MIT",
   "author": "hatif03",
   "main": "dist/index.js",
@@ -39,7 +39,13 @@
     "blockchain",
     "ads",
     "monetization",
-    "decentralized"
+    "decentralized",
+    "metamask",
+    "walletconnect",
+    "theme",
+    "customization",
+    "error-handling",
+    "typescript"
   ],
   "repository": {
     "type": "git",
